[gd_scene load_steps=21 format=1]

[ext_resource path="res://Scripts/Projectiles/GraspingVine.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine10.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine12.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Spells/Nature/graspingVine13.png" type="Texture" id=14]
[ext_resource path="res://Resources/SFX/wav/vines.wav" type="Sample" id=15]

[sub_resource type="SpriteFrames" id=1]

animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ], "loop":false, "name":"grow", "speed":5.0 }, { "frames":[ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ], "loop":false, "name":"die", "speed":10.0 } ]

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 28.0502, -0.0117722, 17.9772, 6.96184, 6.35448, 11.2235, -0.0379944, 11.8046, -7.01161, 11.4172, -18.2469, 7.73669, -28.7073, -0.0117722, -0.231705, -28.0999 )

[sub_resource type="Animation" id=3]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.6 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"free_scn" } ] }
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D:transform/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 1, 1 ), Vector2( 0, 0 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ "die" ] }
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4, 6 ] }

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.09
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.99 ), "transitions":FloatArray( 1, 0.064704 ), "update":0, "values":[ Vector2( 0, 0 ), Vector2( 1, 1 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ "grow" ] }
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = { "times":FloatArray( 0, 0.18, 0.36, 0.54, 0.72, 0.9 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1 ), "update":1, "values":[ 0, 1, 2, 3, 4, 5 ] }

[sub_resource type="SampleLibrary" id=5]

samples/vines = { "db":0.0, "pitch":1.0, "sample":ExtResource( 15 ) }

[node name="GraspingVine" type="KinematicBody2D"]

transform/scale = Vector2( 6, 6 )
input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 2.98023e-08, 2.98023e-08 )
transform/scale = Vector2( 0.0964708, 0.0964708 )
frames = SubResource( 1 )
animation = "grow"
__meta__ = { "_edit_lock_":true }

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( 0.333332, 0.980121 )
transform/scale = Vector2( 1e-05, 1e-05 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 0.9645, 0, 0, 0.9645, 0, 26 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

transform/pos = Vector2( 0, 26 )
transform/scale = Vector2( 0.9645, 0.9645 )
build_mode = 0
polygon = Vector2Array( -0.231705, -28.0999, -28.7073, -0.0117722, -18.2469, 7.73669, -7.01161, 11.4172, -0.0379944, 11.8046, 6.35448, 11.2235, 17.9772, 6.96184, 28.0502, -0.0117722 )
shape_range = Vector2( 0, 0 )
trigger = false
__meta__ = { "_edit_lock_":true }

[node name="LifeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 3 )
anims/fire = SubResource( 4 )
next/fire = "death"
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SFX" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 5 )
config/pitch_random = 0.0

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]


